# flametrace

./: .coveragerc  .flake8  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  python-package.yml
doc/: conf.py  index.rst
src/flametrace/: __init__.py  core.py  main.py
src/flametrace/perl/: flamegraph.pl
src/tests/: __init__.py  test_flametrace.py
