[metadata]
name = flametrace
version = attr: flametrace.__version__
author = Leif Walsh
author_email = leif.walsh@gmail.com
url = https://github.com/leifwalsh/flametrace
description = Build flamegraph charts for process trees, based on strace.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Operating System :: POSIX :: Linux
    Topic :: System :: Benchmark

[options]
package_dir=
    =src
packages=find:
include_package_data = True
install_requires =
    click

[options.packages.find]
where=src

[options.package_data]
flametrace = perl/flamegraph.pl

[options.entry_points]
console_scripts=
    flametrace = flametrace.main:cli